--- a/index.html
+++ b/index.html
@@ -1018,7 +1018,7 @@
       legend.onAdd = function(map) {
         const div = L.DomUtil.create('div', 'legend');
         div.innerHTML = `
-          <h4>Legenda</h4>
+          <h4>Keterangan</h4>
           <div><span style="background: blue; width: 15px; height: 15px; display: inline-block; border-radius: 50%; border: 1px solid #000;"></span> Sekolah</div>
         `;
         return div;
